shopping-list/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-list-deploy
  namespace: shopping-list
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-list-api
  template:
    metadata:
      labels:
        app: shopping-list-api
    spec:
      imagePullSecrets: 
      - name: shopping-list-regcred 
      containers:
      - name: shopping-list-api
        image: repo.matzen.io/shopping-list-app:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        ports:
        - containerPort: 8080
