shopping-list/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-list-api-service
spec:
  type: NodePort
  selector:
    app: shopping-list-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
