shopping-list/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-list-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shopping-list.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-list-api-service
            port:
              number: 8080
